[tool.poetry]
name = "rebuild_game"
version = "0.1.0"
description = ""
authors = ["esiebert <erik.siebert@mobilityhouse.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
ruff = "^0.0.166"
pre-commit = "^2.20.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
